# Lyricus

./: .env  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/prompts/: copilot-instructions.md.prompt.md
doc/: phese1_doc.md  pj_definition_doc.md
docker/: dockerfile_phase1
output/: sample.mid
poc/googlecolab/: localllm_music_gen_poc.ipynb
src/lyricus/: __init__.py  main.py
src/lyricus/core/: __init__.py  composer.py  llm_client.py  parser.py  sys_prompt.py
src/lyricus/metrics/: __init__.py  base.py  syntax.py
src/lyricus/utils/: __init__.py  env.py  utils.py
